docs: create card documentation and responses
